test/corpus/imports.txt
===
Simple import
===

import "spatial.gluon"

interface Foo {
    ping() -> ()
}

---

(source_file
  (import_declaration
    (import_path))
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type))))

===
Import with alias
===

import "other.gluon" as myalias

interface Foo {
    ping() -> ()
}

---

(source_file
  (import_declaration
    (import_path)
    (identifier))
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type))))

===
Multiple imports
===

import "spatial.gluon"
import "other.gluon" as myalias

interface Foo {
    ping() -> ()
}

---

(source_file
  (import_declaration
    (import_path))
  (import_declaration
    (import_path)
    (identifier))
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type))))

===
Imports only file
===

import "spatial.gluon"
import "other.gluon" as myalias

---

(source_file
  (import_declaration
    (import_path))
  (import_declaration
    (import_path)
    (identifier)))
