test/corpus/types.txt
===
Primitive types
===

interface Primitives {
    test(a: bool, b: u8, c: u16, d: u32, e: u64, f: i8, g: i16, h: i32, i: i64, j: f32, k: f64, l: String, m: Fd)
}

---

(source_file
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (parameter_list
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))
        (parameter name: (identifier) type: (primitive_type))))))

===
Container types
===

interface Containers {
    vec_test() -> (v: Vec<u8>)
    set_test() -> (s: Set<String>)
    map_test() -> (m: Map<String, u32>)
    array_test() -> (a: [u8; 32])
}

---

(source_file
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (vec_type
              element: (primitive_type))))))
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (set_type
              element: (primitive_type))))))
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (map_type
              key: (primitive_type)
              value: (primitive_type))))))
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (array_type
              element: (primitive_type)
              size: (integer))))))))

===
Ref types
===

interface RefTest {
    get_any() -> (obj: Ref)
    get_display(name: String) -> (display: Ref<Display>)
}

---

(source_file
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (ref_type)))))
    (method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (primitive_type)))
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (ref_type
              (identifier))))))))

===
Named types
===

interface Named {
    get(name: String) -> (result: HitResult)
}

---

(source_file
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (primitive_type)))
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (named_type
              (type_identifier))))))))

===
Qualified types
===

import "spatial.gluon"

interface QualTest {
    get() -> (v: spatial::Vec3)
}

---

(source_file
  (import_declaration
    (import_path))
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (qualified_type
              namespace: (identifier)
              name: (identifier))))))))

===
Nested container types
===

interface Nested {
    test() -> (v: Vec<Vec<u8>>)
}

---

(source_file
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (vec_type
              element: (vec_type
                element: (primitive_type)))))))))

===
Ref with qualified type
===

import "spatial.gluon"

interface QualRef {
    get() -> (r: Ref<spatial::Node>)
}

---

(source_file
  (import_declaration
    (import_path))
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (ref_type
              (identifier)
              (identifier))))))))

===
Deeply nested types
===

interface Deep {
    test() -> (v: Map<String, Vec<Set<u32>>>)
}

---

(source_file
  (interface_definition
    name: (type_identifier)
    (method
      name: (identifier)
      (return_type
        (parameter_list
          (parameter
            name: (identifier)
            type: (map_type
              key: (primitive_type)
              value: (vec_type
                element: (set_type
                  element: (primitive_type))))))))))
